<resources>
    <string name="app_name">RealDiabeticApp</string>

    <string name="facebook_app_id">224065198338924</string>
    <string name="fb_login_protocol_scheme">fb224065198338924</string>

    <string name="signin">Sign In</string>
    <string name="name">Name: </string>
    <string name="last_check">Lastest Check: </string>
    <string name="HbA1C">HbA1C: </string>
    <string name="last_check_status">Lastest Status: </string>
    <string name="tip">Tips: </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="reset">Reset</string>
    <string name="next">Next</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="birthdate">Birth Date</string>
    <string name="gender">Gender</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="bglv">BG_LV</string>
    <string name="tel">Tel.</string>
    <string name="measured">Measured</string>
    <string name="c_fname">Caregiver First Name</string>
    <string name="c_lname">Caregiver Last Name</string>
    <string name="c_tel">Caregiver Tel.</string>
    <string name="c_email">Caregiver Email.</string>
    <string name="personal_profile">Personal Profile\u0020</string>
    <string name="c_profile">Caregiver Profile\u0020</string>
    <string name="no_value">-</string>
    <string name="glucose_range">Preferred Glucose Range</string>
    <string name="glucose_min_b">Minimum Value before meal</string>
    <string name="glucose_max_b">Maximum Value before meal</string>
    <string name="glucose_min_a">Minimum Value after meal</string>
    <string name="glucose_max_a">Maximum Value after meal</string>
    <string name="none_found">No device found!!!</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="bluetooth">Connecting Status: </string>
    <string name="connect">Connect</string>
    <string name="operation">Select Operation: </string>
    <string name="readlast">Read Lastest Record</string>
    <string name="readall">Read All Record</string>
    <string name="delete">Delete All Record</string>
    <string name="count">Count All Record</string>
</resources>
