<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/activity_register_email"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/activity_register_password"
            app:layout_constraintTop_toTopOf="parent"
            app:counterEnabled="true"
            app:counterMaxLength="255"
            app:hintTextAppearance="@style/HintText"
            app:counterTextAppearance="@style/CounterText"
            app:counterOverflowTextAppearance="@style/CounterOverFlow">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_register_email_edittextt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />

        </android.support.design.widget.TextInputLayout>

        pl<android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/activity_register_password"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/activity_register_cpassword"
            app:layout_constraintTop_toBottomOf="@+id/activity_register_email"
            app:passwordToggleEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:hintTextAppearance="@style/HintText"
            app:counterTextAppearance="@style/CounterText"
            app:counterOverflowTextAppearance="@style/CounterOverFlow">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_register_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/activity_register_cpassword"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/activity_register_button"
            app:layout_constraintTop_toBottomOf="@+id/activity_register_password"
            app:passwordToggleEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:hintTextAppearance="@style/HintText"
            app:counterTextAppearance="@style/CounterText"
            app:counterOverflowTextAppearance="@style/CounterOverFlow">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/activity_register_cpassword_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/activity_register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_register_password" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>